# E2VID_ROS

./: .gitignore  README.md  client.py  client_zmq.py  event_array.proto  event_array_pb2.py  event_callback_test.py  image_reconstructor.py  makefile  run_reconstruction.py  run_reconstruction_ros.py  server.py  server_zmq.py
even_server/: CMakeLists.txt  package.xml
even_server/src/: event_array.pb.cc  event_array.pb.h  event_array.proto  event_server.cpp
scripts/: Stitcher.py  embed_reconstructed_images_in_rosbag.py  extract_events_from_rosbag_celex5.py  image_undistortion.py  panorama_stitching.py  stitching.py  watershed.py
utils/: inference_utils.py
